--- a/versuch_4/header.tex
+++ b/versuch_4/header.tex
@@ -8,7 +8,7 @@
 \usepackage{longtable}
 %Referenzen zwischen unterschiedlichen Dateien
 \usepackage{xr}
-\externaldocument{theorie}
+%\externaldocument{theorie}
 \usepackage{lscape}
 %Deutsche Sprachunterstützung
 \usepackage[utf8]{inputenc}
