--- a/versuch_4/protokoll.tex
+++ b/versuch_4/protokoll.tex
@@ -1,10 +1,11 @@
 \input{header}
+\includeonly{theorie}
 %\includeonly{vorwort,versuchsdurchfuehrung,ergebnisse}
 \begin{document}
 
 \title{Bau eines Doppelpendels als Beispiel für chaotisches Verhalten}
 \subtitle{PPG8}
-\date{Dezember 2013/ Januar 2014}
+\date{Januar 2014}
 \author{Udo Beier \and Leon Brückner \and Valentin Olpp \and Marco Zech \and Sebastian Ziegler}
 \maketitle
 \tableofcontents
