--- a/versuch_4/versuchsdurchfuehrung.tex
+++ b/versuch_4/versuchsdurchfuehrung.tex
@@ -2,7 +2,7 @@
 Für diesen Versuch wurde in einem CAD-Programm das Modell eines Pitot-Rohres erstellt und dieses in einem 3D-Drucker gedruckt.
 
 \section{Messung der Fahrgeschwindigkeiten}
-Um die Geschwindigkeiten des fahrenden Autos zu messen, wurde das Pitot-Rohr am Dach des Autos befestigt, zusammen mit einem anderen, schon vorrÃ¤tigen Pitot-Rohr, welches zur Messung des statischen Druckes verwendet wurde. Diese sind mit einem Feinmamnometer im Inneren des Autos verbunden worden. Mit einer ersten Kamera wurde der Stand des Manometers sowie paralel die von einem GPS-Sensor ausgegebene Geschwindigkeit aufgenommen, mit einer zweiten die Anzeige des Autotachos. Die beiden Aufnahmen wurden Ã¼ber die Audiospur synchronisiert, um die drei Geschwindigkeiten zu jeweils einem bestimmten Zeitpunkt auswerten zu kÃ¶nnen.
+Um die Geschwindigkeiten des fahrenden Autos zu messen, wurde das Pitot-Rohr am Dach des Autos befestigt, zusammen mit einem anderen, schon vorrätigen Pitot-Rohr, welches zur Messung des statischen Druckes verwendet wurde. Diese sind mit einem Feinmamnometer im Inneren des Autos verbunden worden. Mit einer ersten Kamera wurde der Stand des Manometers sowie paralel die von einem GPS-Sensor ausgegebene Geschwindigkeit aufgenommen, mit einer zweiten die Anzeige des Autotachos. Die beiden Aufnahmen wurden über die Audiospur synchronisiert, um die drei Geschwindigkeiten zu jeweils einem bestimmten Zeitpunkt auswerten zu können.
 
 \subsection{AufhÃ¤ngung des Feinmannometers}
-Um mit dem Feinmannometer messen zu kÃ¶nnen, muss es genau senkrecht zum Horizont aufgerichtet werden. Dies wurde im Auto mittels einer kardanischen AufhÃ¤ngung realisiert: in eine frei im Auto, parallel zur Windschutzsceibe hängende Holzplatte wurde das Mannometer mittels eines Kugellagers an einer Gewindestange befestigt und diese in ein Loch in der mitte der Holzplatte eingelassen. Dies garantiert die waagrechte Ausrichting des Mannometers im Auto und gleicht leichtere Erschütterungen aus. 
+Um mit dem Feinmannometer messen zu können, muss es genau senkrecht zum Horizont aufgerichtet werden. Dies wurde im Auto mittels einer kardanischen AufhÃ¤ngung realisiert: in eine frei im Auto, parallel zur Windschutzsceibe hängende Holzplatte wurde das Mannometer mittels eines Kugellagers an einer Gewindestange befestigt und diese in ein Loch in der mitte der Holzplatte eingelassen. Dies garantiert die waagrechte Ausrichting des Mannometers im Auto und gleicht leichtere Erschütterungen aus. 
