--- a/versuch_4/protokoll.tex
+++ b/versuch_4/protokoll.tex
@@ -1,5 +1,5 @@
 \input{header}
-\includeonly{theorie}
+%\includeonly{theorie}
 %\includeonly{vorwort,versuchsdurchfuehrung,ergebnisse}
 \begin{document}
 
