Durchführung wieder hinzugefügt

--- a/versuch_4/protokoll.tex
+++ b/versuch_4/protokoll.tex
@@ -1,9 +1,9 @@
 \input{header}
 %\includeonly{theorie}
-%\includeonly{vorwort,versuchsdurchfuehrung,ergebnisse}
+\includeonly{theorie,versuchsdurchfuehrung,ergebnisse,anhang}
 \begin{document}
 
-\title{Bau eines Doppelpendels als Beispiel für chaotisches Verhalten}
+\title{Geschwindigkeitsmessung mittels Pitotro hr}
 \subtitle{PPG8}
 \date{Januar 2014}
 \author{Udo Beier \and Leon Brückner \and Valentin Olpp \and Marco Zech \and Sebastian Ziegler}
