bilder in durchführung eingefügt

--- a/versuch_4/versuchsdurchfuehrung.tex
+++ b/versuch_4/versuchsdurchfuehrung.tex
@@ -19,4 +19,12 @@ Um die Geschwindigkeiten des fahrenden Autos zu messen, wurde das Pitot-Rohr am 
 \end{figure}
 
 \subsection{Aufhängung des Feinmannometers}
-Um mit dem Feinmannometer messen zu können, muss es genau senkrecht zum Horizont aufgerichtet werden. Dies wurde im Auto mittels einer kardanischen Aufhängung realisiert: in eine frei im Auto, parallel zur Windschutzsceibe hängende Holzplatte wurde das Mannometer mittels eines Kugellagers an einer Gewindestange befestigt und diese in ein Loch in der mitte der Holzplatte eingelassen. Dies garantiert die waagrechte Ausrichting des Mannometers im Auto und gleicht leichtere Erschütterungen aus. 
+Um mit dem Feinmannometer messen zu können, muss es genau senkrecht zum Horizont aufgerichtet werden. Dies wurde im Auto mittels einer kardanischen Aufhängung realisiert (Siehe \ref{aufhängung}): in eine frei im Auto, parallel zur Windschutzscheibe hängende Holzplatte wurde das Mannometer mittels eines Kugellagers an einer Gewindestange befestigt und diese in ein Loch in der mitte der Holzplatte eingelassen. Dies garantiert die waagrechte Ausrichting des Mannometers im Auto und gleicht leichtere Erschütterungen aus. 
+
+
+\begin{figure}
+\centering
+	\includegraphics[width=\textwidth]{images/aufhaengung.JPG}
+	\caption{Feinmannometer und Laptop mit GPS-Sensor}
+	\label{aufhängung}
+\end{figure}
