--- a/versuch_4/versuchsdurchfuehrung.tex
+++ b/versuch_4/versuchsdurchfuehrung.tex
@@ -6,14 +6,14 @@ Um die Geschwindigkeiten des fahrenden Autos zu messen, wurde das Pitot-Rohr am 
 
 \begin{figure}
 \centering
-	\includegraphics[width=\textwidth]{images/rohre.jpg}
+	\includegraphics[width=.8\textwidth]{images/rohre.jpg}
 	\caption{Bild des Versuchsaufbaus auf dem Autodach}
 	\label{rohre}
 \end{figure}
 
 \begin{figure}
 \centering
-	\includegraphics[width=\textwidth]{images/messung.jpg}
+	\includegraphics[width=.8\textwidth]{images/messung.jpg}
 	\caption{Feinmannometer und Laptop mit GPS-Sensor}
 	\label{messung}
 \end{figure}
@@ -24,7 +24,7 @@ Um mit dem Feinmannometer messen zu können, muss es genau senkrecht zum Horizon
 
 \begin{figure}
 \centering
-	\includegraphics[width=\textwidth]{images/aufhaengung.JPG}
+	\includegraphics[width=.5\textwidth]{images/aufhaengung.JPG}
 	\caption{Feinmannometer und Laptop mit GPS-Sensor}
 	\label{aufhängung}
 \end{figure}
